--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -9,37 +9,54 @@
 </head>
 <body>
 
-    <header class="header">
+    <header>
         <a href="../index.html">
             <img src="../img/imglogo.jpg" alt="Logo L.M Novias" class="logo"></a>
         <a href="../index.html">
             <h1>L.M Novias</h1></a>
-        <nav class="nav">
-            <ul>
-                <li>
-                    <a href="../pages/nosotros.html"> Nosotros</a>
+        <nav>
+            <ul class="nav nav-pills">
+                <li class="nav-item">
+                    <div class="inicio">
+                        <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                    </div>
                 </li>
-                <li>
-                    <a href="../pages/galeria.html"> Galeria</a>
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Explorar</a>
+                  <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="#">Nosotros</a></li>
+                    <li><a class="dropdown-item" href="/pages/galeria.html">Galeria</a></li>
+                    <li><a class="dropdown-item" href="/pages/testimonios.html">Testimonios</a></li>
+                    <li><a class="dropdown-item" href="/pages/contacto.html">Contacto</a></li>
+                  </ul>
                 </li>
-                <li>
-                    <a href="../pages/testimonios.html"> Testimonio</a>
-                </li>
-                <li>
-                    <a href="../pages/contacto.html"> Contacto</a>
-                </li>
-            </ul>
+              </ul>
         </nav>
     </header>
-        <section class="section 1">
-            <div class="parrafo">
-                <h2>Nosotros</h2>
-                <p >
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit iusto atque voluptate ullam vel obcaecati accusamus provident fuga error aliquid commodi molestiae placeat, autem adipisci modi quam veniam facere dolorem quae quas aut? Eveniet recusandae odit voluptas quidem possimus fugit aperiam, reiciendis, vero repellat totam laborum. Sunt nulla quis modi mollitia totam placeat repellat eaque velit accusantium facere rem quo, cum magni eos quia maiores cumque commodi ex nam aut inventore odit sequi. Aspernatur, minus atque. Architecto sed earum ullam totam ab vero cum, eveniet in laudantium alias similique aspernatur, reprehenderit nobis nisi aliquam asperiores soluta. Distinctio atque nemo doloribus.
-                </p>
-            </div>
-        </section>
-    </main>
+    <section class="section1">
+        <div class="parrafo">
+            <h2>Nosotros</h2>
+            <p >
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit iusto atque voluptate ullam vel obcaecati accusamus provident fuga error aliquid commodi molestiae placeat, autem adipisci modi quam veniam facere dolorem quae quas aut? Eveniet recusandae odit voluptas quidem possimus fugit aperiam, reiciendis, vero repellat totam laborum. Sunt nulla quis modi mollitia totam placeat repellat eaque velit accusantium facere rem quo, cum magni eos quia maiores cumque commodi ex nam aut inventore odit sequi. Aspernatur, minus atque. Architecto sed earum ullam totam ab vero cum, eveniet in laudantium alias similique aspernatur, reprehenderit nobis nisi aliquam asperiores soluta. Distinctio atque nemo doloribus.
+            </p>
+        </div>
+    </section>
+    <section class="section2">
+        <img src="../img/Evangelina.jpeg" alt="Evangelina" class="img-circle">
+        <h3>Evangelina</h3>
+        <p class="epigrafe2">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rerum culpa ullam dignissimos commodi laboriosam sapiente ab.</p>
+    </section>
+    <section class="section3">
+        <img src="../img/Vanina.jpeg" alt="Vanina" class="img-circle">
+        <h3>Vanina</h3>
+        <p class="epigrafe2">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Non expedita, tenetur quis fugit libero nobis voluptas debitis.</p>
+    </section>
+    <section class="section4">
+        <img src="../img/Jorge.jpeg" alt="Jorge" class="img-circle">
+        <h3>Jorge</h3>
+        <p class="epigrafe2">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deleniti officiis quasi voluptatibus voluptate error eveniet amet.</p>
+    </section>
+    
 
     <footer>
         <h4>E-mail: LMnovias2015@gmail.com</h4>
