--- a/pages/testimonios.html
+++ b/pages/testimonios.html
@@ -7,28 +7,30 @@
     <link rel="stylesheet" href="../css/style.css">
     <title>L.M Novias</title>
 </head>
-<body class="contenedor">
-    <header class="header">
+<body>
+    <header>
         <a href="../index.html">
             <img src="../img/imglogo.jpg" alt="Logo L.M Novias" class="logo"></a>
         <a href="../index.html">
             <h1>L.M Novias</h1></a>
-        <nav class="nav">
-            <ul>
-                <li>
-                    <a href="../pages/nosotros.html"> Nosotros</a>
+        <nav>
+            <ul class="nav nav-pills">
+                <li class="nav-item">
+                    <div class="inicio">
+                        <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                    </div>
                 </li>
-                <li>
-                    <a href="../pages/galeria.html"> Galeria</a>
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Explorar</a>
+                  <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="/pages/nosotros.html">Nosotros</a></li>
+                    <li><a class="dropdown-item" href="/pages/galeria.html">Galeria</a></li>
+                    <li><a class="dropdown-item" href="#">Testimonios</a></li>
+                    <li><a class="dropdown-item" href="/pages/contacto.html">Contacto</a></li>
+                  </ul>
                 </li>
-                <li>
-                    <a href="../pages/testimonios.html"> Testimonio</a>
-                </li>
-                <li>
-                    <a href="../pages/contacto.html"> Contacto</a>
-                </li>
-            </ul>
-        </nav>
+              </ul>
+        </nav> 
     </header>
         <section class="section1">
             <section class="parrafo">
@@ -40,17 +42,17 @@
         <section class="section2">
             <img src="../img/Laura.jpg" alt="Laura" class="img-circle">
                 <h3>Laura</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima ipsam sunt doloribus consequuntur nam dolore nulla</p>
+                <p class="epigrafe2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima ipsam sunt doloribus consequuntur nam dolore nulla</p>
         </section>
         <section class="section3">
             <img src="../img/maria.jpg" alt="Maria" class="img-circle">
                 <h3>Maria</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima ipsam sunt doloribus consequuntur nam dolore nulla</p>
+                <p class="epigrafe2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima ipsam sunt doloribus consequuntur nam dolore nulla</p>
         </section>
         <section class="section4">
             <img src="../img/analia.jpg" alt="Analia" class="img-circle">
             <h3>Analia</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima ipsam sunt doloribus consequuntur nam dolore nulla</p>
+            <p class="epigrafe2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima ipsam sunt doloribus consequuntur nam dolore nulla</p>
         </section>
 
     <footer>
