--- a/index.html
+++ b/index.html
@@ -7,28 +7,29 @@
     <link rel="stylesheet" href="./css/style.css">
     <title>L.M Novias</title>
 </head>
-<body class="contenedor">
-
-    <header class="header">
+<body>
+    <header>
         <a href="#">
             <img src="../img/imglogo.jpg" alt="Logo L.M Novias" class="logo"></a>
         <a href="#">
             <h1>L.M Novias</h1></a>
-        <nav class="nav">
-            <ul>
-                <li>
-                    <a href="./pages/nosotros.html"> Nosotros</a>
+        <nav>
+            <ul class="nav nav-pills">
+                <li class="nav-item">
+                    <div class="inicio">
+                        <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+                    </div>
                 </li>
-                <li>
-                    <a href="./pages/galeria.html"> Galeria</a>
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Explorar</a>
+                  <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="./pages/nosotros.html">Nosotros</a></li>
+                    <li><a class="dropdown-item" href="./pages/galeria.html">Galeria</a></li>
+                    <li><a class="dropdown-item" href="./pages/testimonios.html">Testimonios</a></li>
+                    <li><a class="dropdown-item" href="./pages/contacto.html">Contacto</a></li>
+                  </ul>
                 </li>
-                <li>
-                    <a href="./pages/testimonios.html"> Testimonio</a>
-                </li>
-                <li>
-                    <a href="./pages/contacto.html"> Contacto</a>
-                </li>
-            </ul>
+              </ul>
         </nav>
     </header>
         <section class="section1">
